# PulseGrid

./: .easignore  .gitignore  App.tsx  app.json  help.md  jest.config.js  package-lock.json  package.json  tsconfig.json
docs/: 00-product-vision.md  000-Glossary.txt  01-engineering-principles.md  02-system-architecture.md  02a-system-architecture.md  03-domain-model.md  04-folder-structure.md  04a-quick_metronome.md  05-state-management.md  06-audio-engine.md  07-database.md  08-api-and-services.md  09-ui-guidelines.md  10-testing-strategy.md  11-performance-guidelines.md  12-security.md  13-monetization.md  14-ci-cd.md  15-cursor-rules.md  16-roadmap-oboe.md  adbHelp.txt
modules/native-audio/android/: CMakeLists.txt  build.gradle
modules/native-audio/android/src/main/cpp/: AudioRenderer.cpp  AudioRenderer.h  ClickEvent.h  ClickEventQueue.h  ClickSampleData.h  OboeEngine.cpp  OboeEngine.h  SamplePlayer.cpp  SamplePlayer.h  oboe_click_player_jni.cpp  oboe_jni.cpp
modules/native-audio/android/src/main/java/expo/modules/nativeaudio/: AccentClassification.kt  AudioObservability.kt  ClickPlayer.kt  ClickSoundMapping.kt  ClickSoundPlayer.kt  DebugTimingSnapshot.kt  EventSource.kt  EventSourceTick.kt  MetronomeEngine.kt  NativeAudioModule.kt  OboeClickPlayer.kt  OboeSelfTest.kt  PlaybackMode.kt  QuickMetronomeEventSource.kt  SongTimelineEventSource.kt  SoundPoolClickPlayer.kt  SubdivisionAccentModeMapping.kt  SubdivisionTimingInstrument.kt  TimelinePlaybackEvent.kt
scripts/: embed_click_pcm.py  generate_click_variants.py  generate_metronome_clicks.py  verify_wav.py
(+284 files in other folders)
